--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "babel-jest": "23.4.0",
     "babel-loader": "7.1.5",
     "babel-plugin-dynamic-import-node": "2.0.0",
+    "babel-plugin-emotion": "9.2.8",
     "babel-plugin-flow-runtime": "0.17.0",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-transform-async-to-generator": "6.24.1",
