--- a/.babelrc
+++ b/.babelrc
@@ -36,7 +36,8 @@
       "plugins": [
         "transform-class-properties",
         "transform-object-rest-spread",
-        "babel-plugin-dynamic-import-node"
+        "babel-plugin-dynamic-import-node",
+        "emotion"
       ]
     },
     "testOldEnv": {
